# opus-decoder-core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  make-arm64.sh  make-cross-arm64.sh  make-native.ps1  make-native.sh  make-x64.sh  make.sh  readme.md  test.sh
.github/workflows/: release.yml
include/: core.h
src/: cli.cpp  core.cpp
test/: testMain.cpp
